<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.UserDetailsActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_gravity="bottom"
        android:padding="18dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/userActivity_title_enter_details"
        android:textColor="#3FADA8"
        android:textSize="40sp" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="10dp">

            <!--    Name-->
            <EditText
                android:id="@+id/userDetails_name"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:singleLine="true"
                android:background="@drawable/theme_button_background"
                android:elevation="3dp"
                android:hint="@string/userDetails_edittext_name"
                android:paddingStart="30dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:textSize="15sp" />

            <!--    Mail-ID -->
            <EditText
                android:id="@+id/userDetails_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:background="@drawable/theme_button_background"
                android:elevation="3dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:hint="@string/userDetails_edittext_email"
                android:paddingStart="30dp"
                android:textSize="15sp" />

            <!--Employee Number/ Student Roll Number-->
            <EditText
                android:id="@+id/userDetails_emp_no"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:background="@drawable/theme_button_background"
                android:elevation="3dp"
                android:hint="@string/userDetails_edittext_number"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:paddingStart="30dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/userDetails_"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:background="@drawable/theme_button_background"
                android:elevation="3dp"
                android:hint="@string/userDetails_edittext_self_visitor"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:paddingStart="30dp"
                android:textSize="15sp" />

            <!--Self/ Visitor       -->
            <EditText
                android:id="@+id/userDetails_visitor_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:background="@drawable/theme_button_background"
                android:elevation="3dp"
                android:hint="@string/userDetails_edittext_visitors_name"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:paddingStart="30dp"
                android:textSize="15sp" />

            <!--    Visitors Name-->
            <EditText
                android:id="@+id/userDetails_visitor_purpose"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:background="@drawable/theme_button_background"
                android:elevation="3dp"
                android:hint="@string/userDetails_edittext_visitors_purpose"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:paddingStart="30dp"
                android:textSize="15sp" />

            <!--    Visitors Purpose-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/BookingActivity_RadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/userDetails_radio_self"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/theme_button_background"
                        android:buttonTint="#3FADA8"
                        android:fontFamily="@font/opensans_regular"
                        android:paddingStart="10dp"
                        android:text="@string/userDetails_edittext_radiobutton_self" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/userDetails_radio_visitor"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/theme_button_background"
                        android:buttonTint="#3FADA8"
                        android:fontFamily="@font/opensans_regular"
                        android:paddingStart="10dp"
                        android:text="@string/userDetails_edittext_radiobutton_visitor" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="end|bottom"
        android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/userDetails_fab_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            app:srcCompat="@color/colorAccent" />

    </LinearLayout>

    </LinearLayout>
    </ScrollView>



</LinearLayout>